New LotI transition

--- a/_main.cfg
+++ b/_main.cfg
@@ -39,7 +39,7 @@ Difficulty is adjustable, for 5 players. Uses regular units (side 1 is always Ef
 	[about]
 		title = _ "Authors of additional soundtracks"
 		[entry]
-			name= " "
+			name= "see below"
 		[/entry]
 	[/about]
 	[about]
@@ -78,7 +78,7 @@ Difficulty is adjustable, for 5 players. Uses regular units (side 1 is always Ef
 [+language]
 type_lightning= _ "lightning"
 [/language]
-{~add-ons/Hordes_of_the_Other_World/loti_utils/loti_utils.cfg}
+{~add-ons/Legend_of_the_Invincibles/utils}
 {~add-ons/Hordes_of_the_Other_World/utils}
 
 [+units]
@@ -87,14 +87,8 @@ type_lightning= _ "lightning"
 [lua]
     code = << wesnoth.dofile("~add-ons/Legend_of_the_Invincibles/lua/main.lua") >>
 [/lua]
-[lua]
-    code = << wesnoth.dofile("~add-ons/Hordes_of_the_Other_World/lua/redeem.lua") >>
-[/lua]
-[lua]
-    code = << wesnoth.dofile("~add-ons/Hordes_of_the_Other_World/lua/vile_item_hack.lua") >>
-[/lua]
-{~add-ons/Legend_of_the_Invincibles/terrain.cfg}
 
+{~add-ons/Legend_of_the_Invincibles/terrain.cfg}
 {~add-ons/Hordes_of_the_Other_World/scenarios}
 
 #endif
