Difficulty and travel refractoring + foreach

--- a/scenarios/HotS0.cfg
+++ b/scenarios/HotS0.cfg
@@ -443,30 +443,21 @@ There is <b>no upkeep and no gold gain, although it shows differently</b>, you c
             [/command]
         [/set_menu_item]
         #Variable initialisation
-        {VARIABLE difficulty.act1 0}
-        {VARIABLE difficulty.act2 0}
-        {VARIABLE difficulty.act3 0}
-        {VARIABLE difficulty.act4 0}
         {VARIABLE difficulty.overall 0}
         {VARIABLE difficulty[1].base 60}
         {VARIABLE difficulty[1].multiply 100}
-        {VARIABLE difficulty[1].act 1}
         {VARIABLE difficulty[1].kills 0}
         {VARIABLE difficulty[2].base 60}
         {VARIABLE difficulty[2].multiply 100}
-        {VARIABLE difficulty[2].act 1}
         {VARIABLE difficulty[2].kills 0}
         {VARIABLE difficulty[3].base 60}
         {VARIABLE difficulty[3].multiply 100}
-        {VARIABLE difficulty[3].act 1}
         {VARIABLE difficulty[3].kills 0}
         {VARIABLE difficulty[4].base 60}
         {VARIABLE difficulty[4].multiply 100}
-        {VARIABLE difficulty[4].act 1}
         {VARIABLE difficulty[4].kills 0}
         {VARIABLE difficulty[5].base 60}
         {VARIABLE difficulty[5].multiply 100}
-        {VARIABLE difficulty[5].act 1}
         {VARIABLE difficulty[5].kills 0}
 
         [set_variables]
@@ -518,9 +509,12 @@ There is <b>no upkeep and no gold gain, although it shows differently</b>, you c
 
             [/value]
         [/set_variables]
-        {FOREACH spawns.spawn i}
-            {VARIABLE spawn_list.spawn[$i].free 1}
-        {NEXT i}
+        [foreach]
+            array=spawns.spawn
+            [do]
+                {VARIABLE spawn_list.spawn[$i].free 1}
+            [/do]
+        [/foreach]
         {PLACE_SPAWNS 1}
 	{GOLD_CHEST 40 40}
         {RARE_ITEM 68 53}
@@ -561,43 +555,10 @@ There is <b>no upkeep and no gold gain, although it shows differently</b>, you c
     [/event]
     {KEEP_DISCOVER 21 17 "Act1 - Forest Keep" k11}
     {KEEP_DISCOVER 99 52 "Act1 - Desert Keep" k12}
-        [event]
+    [event]
         name=travel
         first_time_only=no
         {VARIABLE keep_chosen 10}
-        [if]
-            [variable]
-                name = side_travel
-                not_equals=1
-            [/variable]
-            [and]
-                [variable]
-                    name = side_travel
-                    not_equals=2
-                [/variable]
-            [/and]
-            [and]
-                [variable]
-                    name = side_travel
-                    not_equals=3
-                [/variable]
-            [/and]
-            [and]
-                [variable]
-                    name = side_travel
-                    not_equals=4
-                [/variable]
-            [/and]
-            [and]
-                [variable]
-                    name = side_travel
-                    not_equals=5
-                [/variable]
-            [/and]
-            [then]
-                {VARIABLE side_travel $side_number}
-            [/then]
-        [/if]
         [message]
             speaker=narrator
             message= _ "Where do you want to travel?"
@@ -644,9 +605,8 @@ There is <b>no upkeep and no gold gain, although it shows differently</b>, you c
             variable=keep_chosen
             [case]
                 value=10
-                {VARIABLE difficulty[$side_travel].act 1}
                 [switch]
-                    variable=side_travel
+                    variable=side_number
                     [case]
                         value=1
                         {TRAVEL_TO 3 63}
@@ -671,12 +631,10 @@ There is <b>no upkeep and no gold gain, although it shows differently</b>, you c
             [/case]
             [case]
                 value=11
-                {VARIABLE difficulty[$side_travel].act 1}
                 {TRAVEL_TO 21 17}
             [/case]
             [case]
                 value=12
-                {VARIABLE difficulty[$side_travel].act 1}
                 {TRAVEL_TO 99 52}
             [/case]
         [/switch]
