--- a/scenarios/HotS1.cfg
+++ b/scenarios/HotS1.cfg
@@ -481,9 +481,12 @@
                 {A1_TROLL_SPAWN 118 59 7}
             [/value]
         [/set_variables]
-        {FOREACH spawns.spawn i}
-            {VARIABLE spawn_list.spawn[$i].free 1}
-        {NEXT i}
+        [foreach]
+            array=spawns.spawn
+            [do]
+                {VARIABLE spawn_list.spawn[$i].free 1}
+            [/do]
+        [/foreach]
         {PLACE_SPAWNS 1}
 
          {GOLD_CHEST 30 2}
@@ -621,39 +624,6 @@
         name=travel
         first_time_only=no
         {VARIABLE keep_chosen 10}
-        [if]
-            [variable]
-                name = side_travel
-                not_equals=1
-            [/variable]
-            [and]
-                [variable]
-                    name = side_travel
-                    not_equals=2
-                [/variable]
-            [/and]
-            [and]
-                [variable]
-                    name = side_travel
-                    not_equals=3
-                [/variable]
-            [/and]
-            [and]
-                [variable]
-                    name = side_travel
-                    not_equals=4
-                [/variable]
-            [/and]
-            [and]
-                [variable]
-                    name = side_travel
-                    not_equals=5
-                [/variable]
-            [/and]
-            [then]
-                {VARIABLE side_travel $side_number}
-            [/then]
-        [/if]
         [message]
             speaker=narrator
             message= _ "Where do you want to travel?"
@@ -772,9 +742,8 @@
             variable=keep_chosen
             [case]
                 value=10
-                {VARIABLE difficulty[$side_travel].act 1}
                 [switch]
-                    variable=side_travel
+                    variable=side_number
                     [case]
                         value=1
                         {TRAVEL_TO 82 65}
@@ -799,42 +768,34 @@
             [/case]
             [case]
                 value=13
-                {VARIABLE difficulty[$side_travel].act 1}
                 {TRAVEL_TO 111 25}
             [/case]
             [case]
                 value=14
-                {VARIABLE difficulty[$side_travel].act 1}
                 {TRAVEL_TO 135 36}
             [/case]
             [case]
                 value=15
-                {VARIABLE difficulty[$side_travel].act 1}
                 {TRAVEL_TO 6 45}
             [/case]
             [case]
                 value=16
-                {VARIABLE difficulty[$side_travel].act 1}
                 {TRAVEL_TO 49 81}
             [/case]
             [case]
                 value=17
-                {VARIABLE difficulty[$side_travel].act 1}
                 {TRAVEL_TO 13 6}
             [/case]
             [case]
                 value=18
-                {VARIABLE difficulty[$side_travel].act 1}
                 {TRAVEL_TO 79 16}
             [/case]
             [case]
                 value=19
-                {VARIABLE difficulty[$side_travel].act 1}
                 {TRAVEL_TO 158 3}
             [/case]
             [case]
                 value=20
-                {VARIABLE difficulty[$side_travel].act 1}
                 {TRAVEL_TO 6 64}
             [/case]
         [/switch]
