--- a/scenarios/HotS3.cfg
+++ b/scenarios/HotS3.cfg
@@ -582,9 +582,12 @@
                 {A3_GREATER_BLACK_SOUL_SPAWN 45 86 4}
             [/value]
         [/set_variables]
-        {FOREACH spawns.spawn i}
-            {VARIABLE spawn_list.spawn[$i].free 1}
-        {NEXT i}
+        [foreach]
+            array=spawns.spawn
+            [do]
+                {VARIABLE spawn_list.spawn[$i].free 1}
+            [/do]
+        [/foreach]
         {PLACE_SPAWNS 3}
 
 
@@ -615,39 +618,6 @@
         name=travel
         first_time_only=no
         {VARIABLE keep_chosen 10}
-        [if]
-            [variable]
-                name = side_travel
-                not_equals=1
-            [/variable]
-            [and]
-                [variable]
-                    name = side_travel
-                    not_equals=2
-                [/variable]
-            [/and]
-            [and]
-                [variable]
-                    name = side_travel
-                    not_equals=3
-                [/variable]
-            [/and]
-            [and]
-                [variable]
-                    name = side_travel
-                    not_equals=4
-                [/variable]
-            [/and]
-            [and]
-                [variable]
-                    name = side_travel
-                    not_equals=5
-                [/variable]
-            [/and]
-            [then]
-                {VARIABLE side_travel $side_number}
-            [/then]
-        [/if]
         [message]
             speaker=narrator
             message= _ "Where do you want to travel?"
@@ -712,9 +682,8 @@
             variable=keep_chosen
             [case]
                 value=30
-                {VARIABLE difficulty[$side_travel].act 3}
                 [switch]
-                    variable=side_travel
+                    variable=side_number
                     [case]
                         value=1
                         {TRAVEL_TO 50 5}
@@ -739,22 +708,18 @@
             [/case]
             [case]
                 value=31
-                {VARIABLE difficulty[$side_travel].act 3}
                 {TRAVEL_TO 16 13}
             [/case]
             [case]
                 value=32
-                {VARIABLE difficulty[$side_travel].act 3}
                 {TRAVEL_TO 23 56}
             [/case]
             [case]
                 value=33
-                {VARIABLE difficulty[$side_travel].act 3}
                 {TRAVEL_TO 5 76}
             [/case]
             [case]
                 value=34
-                {VARIABLE difficulty[$side_travel].act 3}
                 {TRAVEL_TO 51 82}
             [/case]
         [/switch]
