--- a/scenarios/HotS4.cfg
+++ b/scenarios/HotS4.cfg
@@ -343,9 +343,12 @@
                 
             [/value]
         [/set_variables]
-        {FOREACH spawns.spawn i}
-            {VARIABLE spawn_list.spawn[$i].free 1}
-        {NEXT i}
+        [foreach]
+            array=spawns.spawn
+            [do]
+                {VARIABLE spawn_list.spawn[$i].free 1}
+            [/do]
+        [/foreach]
         {PLACE_SPAWNS 4}
          {GOLD_CHEST 2 47}
          {RARE_ITEM 3 47}
