--- a/utils/difficulty.cfg
+++ b/utils/difficulty.cfg
@@ -30,7 +30,7 @@
                                 [/variable]
                             [/and]
                             [then]
-                                {VARIABLE difficulty[$side_calculated].multiply 150)}
+                                {VARIABLE difficulty[$side_calculated].multiply 150}
                             [/then]
                         [/if]
                         [if]
@@ -45,7 +45,7 @@
                                 [/variable]
                             [/and]
                             [then]
-                                {VARIABLE difficulty[$side_calculated].multiply 230)}
+                                {VARIABLE difficulty[$side_calculated].multiply 230}
                             [/then]
                         [/if]
                         [if]
@@ -60,7 +60,7 @@
                                 [/variable]
                             [/and]
                             [then]
-                                {VARIABLE difficulty[$side_calculated].multiply 320)}
+                                {VARIABLE difficulty[$side_calculated].multiply 320}
                             [/then]
                         [/if]
                         [if]
@@ -75,7 +75,7 @@
                                 [/variable]
                             [/and]
                             [then]
-                                {VARIABLE difficulty[$side_calculated].multiply 450)}
+                                {VARIABLE difficulty[$side_calculated].multiply 450}
                             [/then]
                         [/if]
                         [if]
@@ -90,7 +90,7 @@
                                 [/variable]
                             [/and]
                             [then]
-                                {VARIABLE difficulty[$side_calculated].multiply 600)}
+                                {VARIABLE difficulty[$side_calculated].multiply 600}
                             [/then]
                         [/if]
                         [if]
@@ -99,7 +99,7 @@
                                 greater_than_equal_to=500
                             [/variable]
                             [then]
-                                {VARIABLE difficulty[$side_calculated].multiply 800)}
+                                {VARIABLE difficulty[$side_calculated].multiply 800}
                             [/then]
                         [/if]
                         [set_variable]
