--- a/utils/hero_utils.cfg
+++ b/utils/hero_utils.cfg
@@ -81,74 +81,60 @@
 
 #define TRAVEL_TO X Y
     [if]
-        [variable]
-            name = leader_died 
-            equals = yes
-        [/variable]
+        [have_unit]
+            [not]
+                side=1,2,3,4,5
+            [/not]
+            [filter_location]
+                x,y={X},{Y}
+                radius=4
+                count=5-99
+            [/filter_location]
+        [/have_unit]
         [then]
+             [chat]
+                 speaker= _ "Issue"
+                 message= _ "Cannot teleport to that keep. There are enemies near the destination (in a 4-hex radius)."
+             [/chat]
+        [/then]
+        [else]
             [teleport]
                 [filter]
-                    side=$side_travel
+                    side=$side_number
                     canrecruit=yes
                 [/filter]
                 x,y={X},{Y}
                 clear_shroud=yes
                 animate=no
             [/teleport]
-            {CLEAR_VARIABLE leader_died}
-        [/then]
-        [else]
-            [if]
-                [have_unit]
-                    [filter_location]
-                        x,y={X},{Y}
-                        radius=4
-                        count=5-99
-                    [/filter_location]
-                [/have_unit]
-                [then]
-                    [chat]
-                        speaker= _ "Issue"
-                        message= _ "Cannot teleport to that keep. There are too many units near the destination."
-                    [/chat]
-                [/then]
-                [else]
+            [store_unit]
+                [filter]
+                    side=$side_number
+                [/filter]
+                kill=no
+                variable=teleport_store
+            [/store_unit]
+            [foreach]
+                array=teleport_store
+                [do]
                     [teleport]
                         [filter]
-                            side=$side_travel
-                            canrecruit=yes
+                            id=$teleport_store[$i].id
                         [/filter]
                         x,y={X},{Y}
                         clear_shroud=yes
                         animate=no
                     [/teleport]
-                    [store_unit]
-                        [filter]
-                            side=$side_travel
-                        [/filter]
-                        kill=no
-                        variable=teleport_store
-                    [/store_unit]
-                    {FOREACH teleport_store i}
-                        [teleport]
-                            [filter]
-                                id=$teleport_store[$i].id
-                            [/filter]
-                            x,y={X},{Y}
-                            clear_shroud=yes
-                            animate=no
-                        [/teleport]
-                    {NEXT i}
-                    {CLEAR_VARIABLE teleport_store}
-                    {CLEAR_VARIABLE side_travel}
-                    [scroll_to]
-                        x,y={X},{Y}
-                        check_fogged=false
-                    [/scroll_to]
-                [/else]
-            [/if]
+                [/do]
+            [/foreach]
+            {CLEAR_VARIABLE teleport_store}
+            [scroll_to]
+                x,y={X},{Y}
+                check_fogged=false
+            [/scroll_to]
         [/else]
     [/if]
+
 #enddef
 
 #define KEEP_DISCOVER X Y NAME VARIABLE_NAME
@@ -176,10 +162,13 @@
 		variable=units_to_recall
 	[/store_unit]
 
-	{FOREACH units_to_recall i}
-		[recall]
-			id=$units_to_recall[$i].id
-		[/recall]
-	{NEXT i}
+	[foreach]
+		array=units_to_recall
+		[do]
+			[recall]
+				id=$units_to_recall[$i].id
+			[/recall]
+		[/do]
+	[/foreach]
 	{CLEAR_VARIABLE units_to_recall}
 #enddef	
