--- a/utils/spawn_utils.cfg
+++ b/utils/spawn_utils.cfg
@@ -55,17 +55,21 @@
     [/insert_tag]
 #enddef
 #define PLACE_SPAWNS ACT
-    {FOREACH spawn_list.spawn k}
-        [if]
-            [variable]
-                name=spawn_list.spawn[$k].act
-                equals={ACT}
-            [/variable]
-            [then]
-                {PLACE_SPAWN}
-            [/then]
-        [/if]
-    {NEXT k}
+    [foreach]
+        array=spawn_list.spawn
+        index_var=k
+        [do]
+            [if]
+                [variable]
+                    name=spawn_list.spawn[$k].act
+                    equals={ACT}
+                [/variable]
+                [then]
+                    {PLACE_SPAWN}
+                [/then]
+            [/if]
+        [/do]
+    [/foreach]
 #enddef
 
 #define SPAWN_EVENT
