--- a/scenarios/HotS2.cfg
+++ b/scenarios/HotS2.cfg
@@ -516,9 +516,12 @@
                 
             [/value]
         [/set_variables]
-        {FOREACH spawns.spawn i}
-            {VARIABLE spawn_list.spawn[$i].free 1}
-        {NEXT i}
+        [foreach]
+            array=spawns.spawn
+            [do]
+                {VARIABLE spawn_list.spawn[$i].free 1}
+            [/do]
+        [/foreach]
         {PLACE_SPAWNS 2}
 
         {HOTOW_DIALOGUE Efraim _"Efraim" _"I fear that everything in this place will be something similar to the Corrupted Elves we have already seen."}
@@ -581,39 +584,6 @@
         name=travel
         first_time_only=no
         {VARIABLE keep_chosen 21}
-        [if]
-            [variable]
-                name = side_travel
-                not_equals=1
-            [/variable]
-            [and]
-                [variable]
-                    name = side_travel
-                    not_equals=2
-                [/variable]
-            [/and]
-            [and]
-                [variable]
-                    name = side_travel
-                    not_equals=3
-                [/variable]
-            [/and]
-            [and]
-                [variable]
-                    name = side_travel
-                    not_equals=4
-                [/variable]
-            [/and]
-            [and]
-                [variable]
-                    name = side_travel
-                    not_equals=5
-                [/variable]
-            [/and]
-            [then]
-                {VARIABLE side_travel $side_number}
-            [/then]
-        [/if]
         [message]
             speaker=narrator
             message= _ "Where do you want to travel?"
@@ -732,9 +702,8 @@
             variable=keep_chosen
             [case]
                 value=21
-                {VARIABLE difficulty[$side_travel].act 2}
                 [switch]
-                    variable=side_travel
+                    variable=side_number
 
                     [case]
                         value=1
@@ -760,42 +729,34 @@
             [/case]
             [case]
                 value=22
-                {VARIABLE difficulty[$side_travel].act 2}
                 {TRAVEL_TO 83 41}
             [/case]
             [case]
                 value=23
-                {VARIABLE difficulty[$side_travel].act 2}
                 {TRAVEL_TO 121 24}
             [/case]
             [case]
                 value=24
-                {VARIABLE difficulty[$side_travel].act 2}
                 {TRAVEL_TO 54 40}
             [/case]
             [case]
                 value=25
-                {VARIABLE difficulty[$side_travel].act 2}
                 {TRAVEL_TO 91 7}
             [/case]
             [case]
                 value=26
-                {VARIABLE difficulty[$side_travel].act 2}
                 {TRAVEL_TO 31 82}
             [/case]
             [case]
                 value=27
-                {VARIABLE difficulty[$side_travel].act 2}
                 {TRAVEL_TO 36 2}
             [/case]
             [case]
                 value=28
-                {VARIABLE difficulty[$side_travel].act 2}
                 {TRAVEL_TO 12 93}
             [/case]
             [case]
                 value=29
-                {VARIABLE difficulty[$side_travel].act 2}
                 {TRAVEL_TO 5 87}
             [/case]
         [/switch]
