Added staying here in scenario 3

--- a/scenarios/HotS3.cfg
+++ b/scenarios/HotS3.cfg
@@ -677,6 +677,12 @@
                     {VARIABLE keep_chosen 30}
                 [/command]
             [/option]
+            [option]
+                label= _ "Stay here."
+                [command]
+                    {VARIABLE keep_chosen 0}
+                [/command]
+            [/option]
         [/message]
         [switch]
             variable=keep_chosen
