Keep labels and names, fix #1

--- a/scenarios/HotS0.cfg
+++ b/scenarios/HotS0.cfg
@@ -553,8 +553,8 @@ There is <b>no upkeep and no gold gain, although it shows differently</b>, you c
     {PLACE_IMAGE items/bones.png 106 58}
     {PLACE_IMAGE items/bones.png 110 69}
     [/event]
-    {KEEP_DISCOVER 21 17 "Act1 - Forest Keep" k11}
-    {KEEP_DISCOVER 99 52 "Act1 - Desert Keep" k12}
+    {KEEP_DISCOVER 21 17 "Forest Keep" k11}
+    {KEEP_DISCOVER 99 52 "Desert Keep" k12}
     [event]
         name=travel
         first_time_only=no
@@ -565,7 +565,7 @@ There is <b>no upkeep and no gold gain, although it shows differently</b>, you c
             image=wesnoth-icon.png
             side_for=$side_number
             [option]
-                label= _ "Act1 - Desert Keep"
+                label= _ "Desert Keep"
                 [show_if]
                     [variable]
                         name=k12
@@ -577,7 +577,7 @@ There is <b>no upkeep and no gold gain, although it shows differently</b>, you c
                 [/command]
             [/option]
             [option]
-                label= _ "Act1 - Forest Keep"
+                label= _ "Forest Keep"
                 [show_if]
                     [variable]
                         name=k11
@@ -589,7 +589,7 @@ There is <b>no upkeep and no gold gain, although it shows differently</b>, you c
                 [/command]
             [/option]
             [option]
-                label= _ "Act1 - Starting Keep"
+                label= _ "Starting Keep"
                 [command]
                     {VARIABLE keep_chosen 10}
                 [/command]
