--- a/scenarios/HotS1.cfg
+++ b/scenarios/HotS1.cfg
@@ -612,14 +612,14 @@
 
     {PLACE_IMAGE items/bones.png 93 37}
     [/event]
-    {KEEP_DISCOVER 111 25 "Act1 - Central Cave Keep" k13}
-    {KEEP_DISCOVER 135 36 "Act1 - Northeast Cave Keep" k14}
-    {KEEP_DISCOVER 6 45 "Act1 - Western Cave Keep" k15}
-    {KEEP_DISCOVER 49 81 "Act1 - South-Western Cave Keep" k16}
-    {KEEP_DISCOVER 13 6 "Act1 - Cave Guardian's Keep" k17}
-    {KEEP_DISCOVER 79 16 "Act1 - Forest Guardian's Keep" k18}
-    {KEEP_DISCOVER 158 3 "Act1 - Fire Guardian's Keep" k19}
-    {KEEP_DISCOVER 6 64 "Act1 - Ice Guardian's Keep" k20}
+    {KEEP_DISCOVER 111 25 "Central Cave Keep" k13}
+    {KEEP_DISCOVER 135 36 "Northeast Cave Keep" k14}
+    {KEEP_DISCOVER 6 45 "Western Cave Keep" k15}
+    {KEEP_DISCOVER 49 81 "South-Western Cave Keep" k16}
+    {KEEP_DISCOVER 13 6 "Cave Guardian's Keep" k17}
+    {KEEP_DISCOVER 79 16 "Forest Guardian's Keep" k18}
+    {KEEP_DISCOVER 158 3 "Fire Guardian's Keep" k19}
+    {KEEP_DISCOVER 6 64 "Ice Guardian's Keep" k20}
      [event]
         name=travel
         first_time_only=no
@@ -630,7 +630,7 @@
             image=wesnoth-icon.png
             side_for=$side_number
             [option]
-                label= _ "Act1 - Ice Guardian's Keep"
+                label= _ "Ice Guardian's Keep"
                 [show_if]
                     [variable]
                         name=k20
@@ -642,7 +642,7 @@
                 [/command]
             [/option]
             [option]
-                label= _ "Act1 - Fire Guardian's Keep"
+                label= _ "Fire Guardian's Keep"
                 [show_if]
                     [variable]
                         name=k19
@@ -654,7 +654,7 @@
                 [/command]
             [/option]
             [option]
-                label= _ "Act1 - Forest Guardian's Keep"
+                label= _ "Forest Guardian's Keep"
                 [show_if]
                     [variable]
                         name=k18
@@ -666,7 +666,7 @@
                 [/command]
             [/option]
             [option]
-                label= _ "Act1 - Cave Guardian's Keep"
+                label= _ "Cave Guardian's Keep"
                 [show_if]
                     [variable]
                         name=k17
@@ -678,7 +678,7 @@
                 [/command]
             [/option]
             [option]
-                label= _ "Act1 - Near-Desert Cave Keep"
+                label= _ "South-Western Cave Keep"
                 [show_if]
                     [variable]
                         name=k16
@@ -690,7 +690,7 @@
                 [/command]
             [/option]
             [option]
-                label= _ "Act1 - Southern Cave Keep"
+                label= _ "Western Cave Keep"
                 [show_if]
                     [variable]
                         name=k15
@@ -702,7 +702,7 @@
                 [/command]
             [/option]
             [option]
-                label= _ "Act1 - Northeastern Cave Keep"
+                label= _ "Northeastern Cave Keep"
                 [show_if]
                     [variable]
                         name=k14
@@ -714,7 +714,7 @@
                 [/command]
             [/option]
             [option]
-                label= _ "Act1 - Central Cave Keep"
+                label= _ "Central Cave Keep"
                 [show_if]
                     [variable]
                         name=k13
@@ -726,7 +726,7 @@
                 [/command]
             [/option]
             [option]
-                label= _ "Act1 - Starting Keep"
+                label= _ "Starting Keep"
                 [command]
                     {VARIABLE keep_chosen 10}
                 [/command]
