--- a/scenarios/HotS2.cfg
+++ b/scenarios/HotS2.cfg
@@ -572,14 +572,14 @@
     {PLACE_IMAGE scenery/portal-red.png 3 90}
         {HOTOW_DIALOGUE Lethalia _"Lethalia" _"Sort of. West of here there is a fortress, I feel the strong evil aura coming from its basement. But the portal there is sealed. Four Seal Guardians we need to defeat to break through... Who knows what kind of abonimations they will throw at us?"}
     [/event]
-{KEEP_DISCOVER 83 41 _"Act2 - Central Keep" k22}
-{KEEP_DISCOVER 121 24 _"Act2 - Orcish Keep" k23}
-{KEEP_DISCOVER 54 40 _"Act2 - Swamp Keep" k24}
-{KEEP_DISCOVER 91 7 _"Act2 - City Keep" k25}
-{KEEP_DISCOVER 31 82 _"Act2 - Elven Keep" k26}
-{KEEP_DISCOVER 36 2 _"Act2 - Naga Keep" k27}
-{KEEP_DISCOVER 12 63 _"Act2 - Mountain Keep" k28}
-{KEEP_DISCOVER 5 87 _"Act2 - Fortress of Ultimate Darkness" k29}
+{KEEP_DISCOVER 83 41 _"Central Keep" k22}
+{KEEP_DISCOVER 121 24 _"Orcish Keep" k23}
+{KEEP_DISCOVER 54 40 _"Swamp Keep" k24}
+{KEEP_DISCOVER 91 7 _"Town Keep" k25}
+{KEEP_DISCOVER 31 82 _"Elven Keep" k26}
+{KEEP_DISCOVER 36 2 _"Naga Keep" k27}
+{KEEP_DISCOVER 12 63 _"Mountain Keep" k28}
+{KEEP_DISCOVER 5 87 _"Fortress of Ultimate Darkness" k29}
     [event]
         name=travel
         first_time_only=no
@@ -590,7 +590,7 @@
             image=wesnoth-icon.png
             side_for=$side_number
             [option]
-                label= _ "Act2 - Keep of Ultimate Darkness"
+                label= _ "Keep of Ultimate Darkness"
                 [show_if]
                     [variable]
                         name=k29
@@ -602,7 +602,7 @@
                 [/command]
             [/option]
             [option]
-                label= _ "Act2 - Mountain Keep"
+                label= _ "Mountain Keep"
                 [show_if]
                     [variable]
                         name=k28
@@ -614,7 +614,7 @@
                 [/command]
             [/option]
             [option]
-                label= _ "Act2 - Naga Keep"
+                label= _ "Naga Keep"
                 [show_if]
                     [variable]
                         name=k27
@@ -626,7 +626,7 @@
                 [/command]
             [/option]
             [option]
-                label= _ "Act2 - Elven Keep"
+                label= _ "Elven Keep"
                 [show_if]
                     [variable]
                         name=k26
@@ -638,7 +638,7 @@
                 [/command]
             [/option]
             [option]
-                label= _ "Act2 - Town Keep"
+                label= _ "Town Keep"
                 [show_if]
                     [variable]
                         name=k25
@@ -650,7 +650,7 @@
                 [/command]
             [/option]
             [option]
-                label= _ "Act2 - Swamp Keep"
+                label= _ "Swamp Keep"
                 [show_if]
                     [variable]
                         name=k24
@@ -662,7 +662,7 @@
                 [/command]
             [/option]
             [option]
-                label= _ "Act2 - Orcish Keep"
+                label= _ "Orcish Keep"
                 [show_if]
                     [variable]
                         name=k23
@@ -674,7 +674,7 @@
                 [/command]
             [/option]
             [option]
-                label= _ "Act2 - Central Keep"
+                label= _ "Central Keep"
                 [show_if]
                     [variable]
                         name=k22
@@ -686,7 +686,7 @@
                 [/command]
             [/option]
             [option]
-                label= _ "Act2 - Starting Keep"
+                label= _ "Starting Keep"
                 [command]
                     {VARIABLE keep_chosen 21}
                 [/command]
