--- a/scenarios/HotS3.cfg
+++ b/scenarios/HotS3.cfg
@@ -610,10 +610,10 @@
         {RARE_ITEM 20 97}
 
     [/event]
-    {KEEP_DISCOVER 16 13 _"Act3 - Courtyard Entrance Keep" k31}
-    {KEEP_DISCOVER 23 56 _"Act3 - Courtyard Keep" k32}
-    {KEEP_DISCOVER 5 76 _"Act3 - Inner Fortress Entrance Keep" k33}
-    {KEEP_DISCOVER 51 82 _"Act3 - Shadowlord's Keep" k34}
+    {KEEP_DISCOVER 16 13 _"Courtyard Entrance Keep" k31}
+    {KEEP_DISCOVER 23 56 _"Courtyard Keep" k32}
+    {KEEP_DISCOVER 5 76 _"Inner Fortress Entrance Keep" k33}
+    {KEEP_DISCOVER 51 82 _"Shadowlord's Keep" k34}
     [event]
         name=travel
         first_time_only=no
@@ -624,7 +624,7 @@
             image=wesnoth-icon.png
             side_for=$side_number
             [option]
-                label= _ "Act3 - Shadowlord's Keep"
+                label= _ "Shadowlord's Keep"
                 [show_if]
                     [variable]
                         name=k34
@@ -636,7 +636,7 @@
                 [/command]
             [/option]
             [option]
-                label= _ "Act3 - Inner Fortress Entrance Keep"
+                label= _ "Inner Fortress Entrance Keep"
                 [show_if]
                     [variable]
                         name=k33
@@ -648,7 +648,7 @@
                 [/command]
             [/option]
             [option]
-                label= _ "Act3 - Courtyard Keep"
+                label= _ "Courtyard Keep"
                 [show_if]
                     [variable]
                         name=k32
@@ -660,7 +660,7 @@
                 [/command]
             [/option]
             [option]
-                label= _ "Act3 - Courtyard Entrance Keep"
+                label= _ "Courtyard Entrance Keep"
                 [show_if]
                     [variable]
                         name=k31
@@ -672,7 +672,7 @@
                 [/command]
             [/option]
             [option]
-                label= _ "Act3 - Starting Keep"
+                label= _ "Starting Keep"
                 [command]
                     {VARIABLE keep_chosen 30}
                 [/command]
