--- a/utils/hero_utils.cfg
+++ b/utils/hero_utils.cfg
@@ -148,6 +148,10 @@
             speaker="Information"
             message="{NAME} discovered. Now you can move there at any time."
         [/chat]
+        [label]
+            x,y={X},{Y}
+            text={NAME}
+        [/label]
         {VARIABLE {VARIABLE_NAME} 1}
     [/event]
 #enddef
